# rust_basic

./: Cargo.toml  README.md
src/datatype/src/: main.rs
src/function_basic/: Cargo.toml
src/heap/src/: main.rs
src/keyword_self/: Cargo.toml
src/keyword_self/src/: main.rs
src/memory_debug/: Cargo.toml
src/memory_management/src/stack/: stack_ex_1.rs  stack_ex_2.rs
src/refer_owner_borrow/: Cargo.toml
src/refer_owner_borrow/src/: main.rs
