workspace = { members = [ "src/datatype","src/memory_debug"] }
[package]
name = "rust_basic"
version = "0.1.0"
edition = "2021"


# เพิ่มส่วนนี้เพื่อระบุไฟล์ที่ต้องการรัน #
[[bin]]
name = "stack_example_1"
path = "src/memory_debug/src/stack_ex_1.rs"

[[bin]]
name = "main"
path = "src/datatype/src/main.rs"




# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
